--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
-name: demo_package
+name: demo_package_tf
 description: "A new Flutter project."
 version: 0.0.1
 homepage: https://github.com/sarthakvaghasiya/demo_packages
+publish_to: none
 
 environment:
   sdk: '>=3.2.5 <4.0.0'
@@ -10,6 +11,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  demo_package:
+    path: D:/demo_package/demo_package
+
 
 dev_dependencies:
   flutter_test:
